--- a/css/home.css
+++ b/css/home.css
@@ -1,105 +1,10 @@
-@import url(https://fonts.googleapis.com/css2?family=Poppins%3Awght%40100%3B200%3B300%3B400%3B500%3B600&display=swap%27%29%3B);
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    border: none;
-    outline: none;
-    font-family: 'Poppins', sans-serif;
-}
-
-html{
-    font-size: 62.5%;
-}
-
-body{
-    width: 100%;
-    height: 100vh;
-    overflow-x: hidden;
-    background-color: black;
-    color: white;
-}
-
-header{
-    margin-top: 20px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding: 1rem 9%;
-    background-color: transparent;
-    filter: drop-shadow(10px);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-}
-
-.logo{
-    font-size: 3rem;
-    color: #c92626;
-    font-weight: 800;
-    cursor: pointer;
-    transition: 0.5s ease;
-}
-
-.logo:hover{
-    transform: scale(1.1);
-}
-
-nav a{
-    font-size: 1.8rem;
-    color:white;
-    margin-left: 4rem;
-    font-weight: 500;
-    transition: 0.3s ease;
-    border-bottom: 3px solid transparent;
-}
-
-nav a:hover,
-nav a.active {
-    color: #c92626;
-    border-bottom: 3px solid #c92626;
-}
-
-@media(max-width: 995px){
-    nav{
-        position: absolute;
-        top: 100%;
-        right: 0;
-        width: 40%;
-        border-left: 3px solid #c92626;
-        border-bottom: 3px solid #c92626;
-        border-bottom-left-radius: 2rem;
-        padding: 1rem solid;
-        background-color: #161616;
-        border-top: 0.1rem solid rgba(0,0,0,0.1) ;
-    }
-
-    nav .active{
-        display: block;
-    }
-
-    nav a{
-        display: block;
-        font-size: 2rem;
-        margin: 3rem;
-    }
-
-    nav a:hover,
-    nav a.active{
-        border-radius: 0.5rem;
-        border-bottom: 0.5s solid #c92626;
-    }    
-}
-
 section{
     min-height: 100vh;
     padding: 5rem 9% 5rem;
 }
 
 .home{
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -133,12 +38,15 @@ span{
     border-radius: 50%;
     box-shadow: 0 0 25px solid #c92626;
     cursor: pointer;
-    transition: 0.2s linear;
+    transition: 0.2s ease-in-out;
 }
 
 .home-img img:hover{
     font-size: 1.8rem;
     font-weight: 500;
+    box-shadow: 0 0 15px #c92626,
+    0 0 30px  #c92626,
+    0 0 80px  #c92626;
 }
 
 .social-icons a{
@@ -178,6 +86,17 @@ span{
 }
 
 .bttn:hover{
+    transform: scale3d(1.03);
+    background-color: #c92626;
+    color: black;
+    box-shadow: 0 0 25px #c92626;
+}
+
+.text span{
+    cursor: pointer;
+}
+
+.text span:hover{
     transform: scale3d(1.03);
     background-color: #c92626;
     color: black;
