--- a/css/syle.css
+++ b/css/syle.css
@@ -2,12 +2,12 @@
 
 section{
     min-height: 100vh;
-    padding: 15rem 9% 5rem;
+    padding: 10rem 9% 5rem;
 }
 
 #sobre-mim , #meus-trabalhos , #servicos , #skills , #formacao , #contato{
     min-height: 100vh;
-    padding: 13rem 10%;
+    padding: 12rem 10%;
     color: white;
     background-color: black;
 }
@@ -22,13 +22,13 @@ section{
 }
 
 .home .home-content h1{
-    font-size: 3rem;
+    font-size: 4rem;
     font-weight: 700;
     line-height: 1.3;
 }
 
 .home .home-content p{
-    font-size: medium;
+    font-size: 1.7cqb;
 }
 
 span{
@@ -36,7 +36,7 @@ span{
 }
 
 .home-content h3{
-    font-size: 4rem;
+    font-size: 6rem;
     margin-bottom: 1rem;
     font-weight: 700;
 }
@@ -330,5 +330,85 @@ section .titulo span:after{
     }
 }
 
-/* MEUS TRABALHOS */
+/* SKILLS */
+
+#skills .content {
+    margin-top: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+}
+
+#skills .skills-detalhes {
+    flex: 1;
+    max-width: 40%;
+}
+
+#skills .text .topico {
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+#skills .text p {
+    font-size: 14px;
+    line-height: 1.6;
+    opacity: 0.8;
+}
+
+#skills .experience {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+
+#skills .num {
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    margin-right: 10px;
+}
+
+#skills .exp {
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+/* Lado direito (habilidades) */
+#skills .boxes {
+    flex: 1;
+    max-width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+#skills .box {
+    width: 45%;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.1);
+    text-align: center;
+    border-radius: 10px;
+}
+
+#skills .box .topico {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+}
+
+#skills .box .per {
+    font-size: 40px;
+    font-weight: bold;
+    color: red;
+    margin-top: 10px;
+}
+
+
+
+
 
